proj1/testing/error/rotorsOutOfOrder.inp
* B I BETA II III (AAAA)
HELLO WORLD